# rules_doom

./: .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md
.bcr/: README.md  metadata.template.json
.github/workflows/: ci.yml  publish.yml  release.yml  release_prep.sh
config/engine/: BUILD.bazel
config/iwad/: BUILD.bazel
doom/: defs.bzl  repositories.bzl
doom/engine/: BUILD.bazel
doom/private/: constants.bzl  engine.bzl  launch.bzl  providers.bzl  wad.bzl  zdbsp_wad.bzl
doom/private/local_iwad/: repo.bzl
doom/private/terminal/: repo.bzl
doom/private/udmf/: compile.bzl  pwad.bzl
doom/private/wadc/: compile.bzl  pwad.bzl
doom/wads/: BUILD.bazel
examples/launch/: BUILD.bazel
examples/wadc/: BUILD.bazel
