load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "engine",
    build_setting_default = "uzdoom",
    values = [
        "ascii",
        "crispy",
        "uzdoom",
    ],
)

config_setting(
    name = "crispy",
    flag_values = {
        ":engine": "crispy",
    },
)

config_setting(
    name = "uzdoom",
    flag_values = {
        ":engine": "uzdoom",
    },
)

config_setting(
    name = "ascii",
    flag_values = {
        ":engine": "ascii",
    },
)
