load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "iwad",
    build_setting_default = "freedoom2",
    values = [
        "freedoom1",
        "freedoom2",
    ],
)

config_setting(
    name = "freedoom1",
    flag_values = {
        ":iwad": "freedoom1",
    },
)

config_setting(
    name = "freedoom2",
    flag_values = {
        ":iwad": "freedoom2",
    },
)
